# NFSWolf

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  clippy.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml  security.yml
docs/: FINDINGS.md
docs/findings/: F-1.1-uid-gid-spoofing.md  F-1.2-root-squash-bypass.md  F-1.3-auxiliary-group-injection.md  F-1.4-machine-name-spoofing.md  F-1.5-credential-replay.md  F-1.6-nfsv2-downgrade.md  F-2.1-export-escape.md  F-2.2-file-handle-guessing.md  F-2.3-windows-handle-signing.md  F-2.4-btrfs-subvolume-escape.md  F-2.5-stale-handle-persistence.md  F-2.6-bind-mount-escape.md  F-3.1-plaintext-wire-protocol.md  F-3.2-portmapper-amplification.md  F-3.3-ip-spoofing-host-trust.md  F-3.4-striptls-downgrade.md  F-3.5-portmapper-tunnel-bypass.md  F-4.1-no-root-squash.md  F-4.2-suid-sgid-escalation.md  F-4.3-device-node-creation.md  F-4.4-symlink-escape.md  F-4.5-selinux-label-bypass.md  F-5.1-export-list-enumeration.md  F-5.2-readdirplus-handle-harvesting.md  F-5.3-nis-credential-extraction.md  F-5.4-rpc-service-enumeration.md  F-5.5-nfsv4-pseudo-fs-leakage.md  F-6.1-nlm-lock-attacks.md  F-6.2-grace-period-dos.md  F-6.3-setclientid-state-destruction.md  F-7.1-wildcard-export-policy.md  F-7.2-privileged-port-bypass.md  F-7.3-nohide-crossmnt-exposure.md  F-7.4-missing-nosuid-nodev.md  F-7.5-squash-misconfiguration.md  F-7.6-no-audit-logging.md  README.md
src/: fuse.rs  main.rs  output.rs  shell.rs
src/cli/: analyze.rs  attack.rs  brute_handle.rs  convert.rs  escape.rs  export.rs  mod.rs  mount.rs  probe.rs  scan.rs  shell.rs  target.rs  uid_spray.rs
src/engine/: analyzer.rs  credential.rs  file_handle.rs  fs_walker.rs  mod.rs  scan_types.rs  scanner.rs  uid_sprayer.rs
src/proto/: auth.rs  auto_uid.rs  circuit.rs  conn.rs  mod.rs  mount.rs  pool.rs  portmap.rs  rpc_probe.rs  udp.rs
src/proto/nfs2/: client.rs  mod.rs  types.rs
src/proto/nfs3/: client.rs  errors.rs  mod.rs  types.rs
src/proto/nfs4/: compound.rs  mod.rs  types.rs
src/proto/nlm/: client.rs  mod.rs
src/proto/nsm/: client.rs  mod.rs
src/report/: console.rs  csv.rs  html.rs  json.rs  markdown.rs  mod.rs  txt.rs
src/util/: mod.rs  privilege.rs  stealth.rs  utmp.rs
tests/integration/: analyzer_test.rs  attack_test.rs  escape_test.rs  nfs3_protocol_test.rs  scan_test.rs
