[package]
name = "nfswolf"
version = "0.6.0"
edition = "2024"
rust-version = "1.95"
description = "Pure-Rust NFS (v2/v3/v4) security toolkit: recon, analysis, export-escape, FUSE mount, and an interactive shell for authorized red-team and pentest work."
license = "Apache-2.0"
repository = "https://github.com/StrongWind1/NFSWolf"
keywords = ["nfs", "security", "pentest", "scanner", "rpc"]
categories = ["command-line-utilities", "network-programming", "filesystem"]
readme = "README.md"
include = [
  "/src/**/*",
  "/tests/**/*",
  "/Cargo.toml",
  "/Cargo.lock",
  "/README.md",
  "/LICENSE",
  "/CHANGELOG.md",
]

# Build the published documentation on docs.rs with all features enabled and a
# stable cfg flag (`docsrs`), matching the convention used by most well-curated
# Rust crates so doc rebuilds stay deterministic across nightly toolchains.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
clap_complete = "4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# NFS protocol (NFSv3 + MOUNT + portmapper  --  pure Rust, no C deps)
nfs3_client = { version = "0.9", features = ["tokio"] }
nfs3_types = "0.5"

# Networking
socket2 = { version = "0.6", features = ["all"] }
dashmap = "6"

# FUSE
fuser = { version = "0.17", optional = true }

# TUI / Shell
rustyline = "18"
indicatif = "0.18"

# Output / Reporting
colored = "3"
tabled = { version = "0.21", default-features = false, features = ["ansi"] }

# Cryptography
sha2 = "0.11"

# Utilities
rand = "0.10"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ipnet = "2"

# POSIX detach for `nfswolf mount` (libc::daemon).  The mount subcommand
# detaches itself so the FUSE handler survives the operator's shell exit;
# this is the only place the binary uses libc directly, and the unsafe
# call is gated by `#[allow(unsafe_code, reason = ...)]` at a single site.
libc = "0.2"

[dev-dependencies]
proptest = "1"
assert_cmd = "2"
predicates = "3"
nfs3_server = { version = "0.11", features = ["memfs"] }

[features]
default = ["fuse"]
fuse = ["dep:fuser"]

[[bin]]
name = "nfswolf"
path = "src/main.rs"

[[test]]
name = "scan_test"
path = "tests/integration/scan_test.rs"

[[test]]
name = "nfs3_protocol_test"
path = "tests/integration/nfs3_protocol_test.rs"

[[test]]
name = "escape_test"
path = "tests/integration/escape_test.rs"

[[test]]
name = "analyzer_test"
path = "tests/integration/analyzer_test.rs"

# ---------------------------------------------------------------------------
# [patch.crates-io]
#
# nfs3_client v0.9.0 does not expose a way to swap AUTH_SYS credentials on
# an established Nfs3Client connection. NFSWolf needs this for UID/GID
# spraying (F-3.1) and auto-uid escalation -- reuse one TCP session while
# changing the AUTH_SYS stamp per call (see src/proto/conn.rs::access_as).
#
# Until upstream (Vaiz/nfs3 #150) ships a release with a public setter,
# we patch locally via vendor/nfs3_client/:
#   * src/nfs.rs   -- adds pub fn set_credential()
#   * src/rpc.rs   -- makes credential/verifier fields pub
#
# When #150 ships, delete vendor/nfs3_client/ and remove this patch block,
# then bump nfs3_client version in [dependencies] above.
# ---------------------------------------------------------------------------
[patch.crates-io]
nfs3_client = { path = "vendor/nfs3_client" }

[profile.dev]
# Catch integer overflows in debug builds rather than wrapping silently.
overflow-checks = true

[profile.release]
opt-level = 3
# Full link-time optimisation for maximum performance and smaller binary.
lto = true
# Single codegen unit forces cross-crate inlining; required for full LTO.
codegen-units = 1
# Unwind on panic so the scanner can isolate per-host failures via
# tokio::spawn / JoinError::is_panic. A single bad target must not abort
# a multi-thousand-host sweep.
panic = "unwind"
# Catch overflows in release too; remove only if profiling proves the cost.
overflow-checks = true
# Strip debug symbols from the release binary.
strip = "symbols"

[profile.test]
# Overflow checks in tests to catch arithmetic bugs.
overflow-checks = true

# --- Lint policy ---
[lints.rust]
# --- Forbid (no override possible) ------------------------------------------
# Provable integer overflow at compile time.
arithmetic_overflow = "forbid"
# Dereferencing a null pointer -- always UB.
deref_nullptr = "forbid"
# Wrong memory ordering on atomic operations -- always a bug.
invalid_atomic_ordering = "forbid"
# Passing null to a function requiring non-null -- always UB.
invalid_null_arguments = "forbid"
# Casting &T to &mut T -- always UB.
invalid_reference_casting = "forbid"
# transmute(&T) to &mut T -- always UB.
mutable_transmutes = "forbid"
# Homoglyph attack vector -- no non-ASCII in identifiers.
non_ascii_idents = "forbid"
# Literal doesn't fit its type -- always a bug.
overflowing_literals = "forbid"
# Unicode bidi attack vector in comments.
text_direction_codepoint_in_comment = "forbid"
# Unicode bidi attack vector in string literals.
text_direction_codepoint_in_literal = "forbid"
# Code that provably panics at runtime -- always a bug.
unconditional_panic = "forbid"
# All unused-code lints (dead_code, unused_variables, unused_imports, etc.).
unused = { level = "allow", priority = -3 }
# --- Deny (per-project override) --------------------------------------------
# Deny (not forbid) -- NFSWolf needs one #[allow] for libc::daemon in src/main.rs.
unsafe_code = "deny"
# --- Deny (deny-by-default) -------------------------------------------------
ambiguous_associated_items = "deny"
ambiguous_glob_imports = "deny"
binary_asm_labels = "deny"
bindings_with_variant_name = "deny"
conflicting_repr_hints = "deny"
dangerous_implicit_autorefs = "deny"
dependency_on_unit_never_type_fallback = "deny"
duplicate_features = "deny"
elided_lifetimes_in_associated_constant = "deny"
enum_intrinsics_non_enums = "deny"
explicit_builtin_cfgs_in_flags = "deny"
ill_formed_attribute_input = "deny"
incomplete_include = "deny"
ineffective_unstable_trait_impl = "deny"
invalid_from_utf8_unchecked = "deny"
invalid_macro_export_arguments = "deny"
invalid_type_param_default = "deny"
legacy_derive_helpers = "deny"
let_underscore_lock = "deny"
long_running_const_eval = "deny"
macro_expanded_macro_exports_accessed_by_absolute_paths = "deny"
named_asm_labels = "deny"
never_type_fallback_flowing_into_unsafe = "deny"
no_mangle_const_items = "deny"
out_of_scope_macro_calls = "deny"
patterns_in_fns_without_body = "deny"
proc_macro_derive_resolution_fallback = "deny"
pub_use_of_private_extern_crate = "deny"
repr_transparent_non_zst_fields = "deny"
semicolon_in_expressions_from_macros = "deny"
undropped_manually_drops = "deny"
uninhabited_static = "deny"
unknown_crate_types = "deny"
useless_deprecated = "deny"
# --- Warn (upgraded from allow) ----------------------------------------------
absolute_paths_not_starting_with_crate = "warn"
ambiguous_negative_literals = "warn"
closure_returning_async_block = "warn"
deprecated_in_future = "warn"
deprecated_safe_2024 = "warn"
deref_into_dyn_supertrait = "warn"
edition_2024_expr_fragment_specifier = "warn"
elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"
ffi_unwind_calls = "warn"
if_let_rescope = "warn"
impl_trait_overcaptures = "warn"
impl_trait_redundant_captures = "warn"
keyword_idents_2018 = "warn"
keyword_idents_2024 = "warn"
let_underscore_drop = "warn"
linker_info = "warn"
linker_messages = "warn"
macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
missing_unsafe_on_extern = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
rust_2021_incompatible_closure_captures = "warn"
rust_2021_incompatible_or_patterns = "warn"
rust_2021_prefixes_incompatible_syntax = "warn"
rust_2021_prelude_collisions = "warn"
rust_2024_guarded_string_incompatible_syntax = "warn"
rust_2024_incompatible_pat = "warn"
rust_2024_prelude_collisions = "warn"
single_use_lifetimes = "warn"
tail_expr_drop_order = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unit_bindings = "warn"
unnameable_types = "warn"
unreachable_pub = "warn"
unsafe_attr_outside_unsafe = "warn"
unsafe_op_in_unsafe_fn = "warn"
unstable_features = "warn"
unused_crate_dependencies = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
unused_results = "warn"
variant_size_differences = "warn"

[lints.clippy]
# --- Lint groups (explicit levels) -------------------------------------------
# Priority -1 so per-lint overrides (default priority 0) take precedence.
all                = { level = "deny", priority = -2 }
correctness        = { level = "deny", priority = -1 }
suspicious         = { level = "deny", priority = -1 }
complexity         = { level = "deny", priority = -1 }
perf               = { level = "deny", priority = -1 }
style              = { level = "deny", priority = -1 }
pedantic           = { level = "deny", priority = -1 }
cargo              = { level = "deny", priority = -1 }
restriction        = { level = "allow", priority = -1 }
nursery            = { level = "allow", priority = -1 }
# --- Restriction lints promoted to deny --------------------------------------
# No dbg!() in committed code.
dbg_macro = "deny"
# No process::exit -- return from main or propagate errors.
exit = "deny"
# No std::mem::forget -- almost always a resource leak bug.
mem_forget = "deny"
# No todo!() -- use proper error handling or file an issue.
todo = "deny"
# No unimplemented!() -- handle all code paths.
unimplemented = "deny"
# No .unwrap() inside functions returning Result -- propagate the error.
unwrap_in_result = "deny"
# --- Restriction lints promoted to warn --------------------------------------
# Prefer #[expect] over #[allow] -- warns when the suppression becomes unnecessary.
allow_attributes = "warn"
# Every #[allow] / #[expect] must carry a reason = "..." string.
allow_attributes_without_reason = "warn"
# Flag functions exceeding the complexity threshold (set in clippy.toml).
cognitive_complexity = "warn"
# Prefer create_dir_all -- create_dir fails if parents are missing.
create_dir = "warn"
# Empty Drop impl is a code smell -- runs on every drop for no effect.
empty_drop = "warn"
# No .expect() in library code -- force proper error propagation.
expect_used = "warn"
# No container[index] via .get_unwrap() -- use .get() + match.
get_unwrap = "warn"
# No direct slice[index] -- use .get() for bounds-checked access.
indexing_slicing = "warn"
# Flag large files pulled in via include_bytes! / include_str!.
large_include_file = "warn"
# Require assert!(slice.len() > N) before multi-index access.
missing_asserts_for_indexing = "warn"
# No reads and writes to the same variable in one expression.
mixed_read_write_in_expression = "warn"
# One unsafe operation per unsafe block for precise safety justification.
multiple_unsafe_ops_per_block = "warn"
# Prefer AtomicBool / AtomicUsize over Mutex<bool> / Mutex<usize>.
mutex_atomic = "warn"
# Prefer AtomicU32 / AtomicI64 over Mutex<u32> / Mutex<i64>.
mutex_integer = "warn"
# No r"..." when the string contains no backslashes or quotes.
needless_raw_strings = "warn"
# Suggest NonZeroU32 etc. where a value is known non-zero.
non_zero_suggestions = "warn"
# No panic!() in library code -- return errors.
panic = "warn"
# No panic!() in functions that return Result.
panic_in_result_fn = "warn"
# Use PathBuf::from("a/b") instead of PathBuf::new() + push("a") + push("b").
pathbuf_init_then_push = "warn"
# Parenthesize bitwise operations to make precedence explicit.
precedence_bits = "warn"
# Use Rc<str> instead of Rc<String> -- avoids double indirection.
rc_buffer = "warn"
# Rc<Mutex<T>> is almost always a mistake -- use Arc<Mutex<T>>.
rc_mutex = "warn"
# Trait impl parameter names should match the trait definition.
renamed_function_params = "warn"
# Use .to_owned() instead of .to_string() on &str.
str_to_string = "warn"
# Use .contains(ch) instead of .chars().any(|c| c == ch).
string_lit_chars_any = "warn"
# Flag ^ used where ** (power) was likely intended.
suspicious_xor_used_as_pow = "warn"
# Every unsafe block must have a // SAFETY: comment.
undocumented_unsafe_blocks = "warn"
# Remove stale // SAFETY: comments on safe code.
unnecessary_safety_comment = "warn"
# Remove stale # Safety doc sections on safe functions.
unnecessary_safety_doc = "warn"
# Don't silently discard Result via .ok().
unused_result_ok = "warn"
# No .unwrap() in library code -- force proper error propagation.
unwrap_used = "warn"
# --- Cargo group: override to allow -----------------------------------------
# Transitive dependency version conflicts are not actionable.
multiple_crate_versions = "allow"
# --- Pedantic group: overrides to allow --------------------------------------
# Protocol identifiers (AUTH_SYS, NFSv2, CRC32) trigger false positives.
doc_markdown = "allow"
# Too noisy for internal tools -- every pub fn returning Result would need # Errors.
missing_errors_doc = "allow"
# Too noisy for internal tools -- every panicking pub fn would need # Panics.
missing_panics_doc = "allow"
